# virage

./: .gitignore  .mcp.json  .npmrc  .release-please-manifest.json  .versionrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  hierarchy.html  index.html  modules.html  package-lock.json  package.json  pnpm-lock.yaml  rag.config.ci.json  rag.config.ci.ts  rag.config.ts  tsconfig.json  typedoc.json  virage.config.ci.json  virage.config.hybrid.cross-encoder.json  virage.config.hybrid.json  virage.config.vector.cross-encoder.json  virage.config.vector.json  vitest.config.ts
.agents/specs/: CONTRADICTIONS.md  NEXT.md  NOW.md
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yaml
.github/config/: release-please.json
.github/workflows/: ce-subtree-export.yaml  ci-rag-core.yaml  ci-rag-embedder-fastembed.yaml  ci-rag-embedder-openai.yaml  ci-rag-embedder-transformers.yaml  ci-rag-strategies.yaml  ci-virage-core.yaml  ci-virage-embedder-fastembed.yaml  ci-virage-embedder-openai.yaml  ci-virage-embedder-transformers.yaml  ci-virage-strategies.yaml  ci.yaml  deploy-telemetry-proxy.yaml  eval-db-release.yaml  eval-gate.yaml  native-publish.yaml  publish-ce-manual.yaml  publish-ce-manual.yml  publish.yaml  quality-self-assessment.yaml  quality.yml  rag-eval.yaml  rag-eval.yml  rag-update.yaml  release.yaml  virage-publish.yaml  (+2 more)
assets/: hierarchy.js  highlight.css  navigation.js  search.js
badges/: quality.json
classes/: ChunkError.html  ChunkProcessor.html  CliGitSourceRepository.html  ConfigError.html  ConsolaLogger.html  EcosystemEvaluator.html  EmbedError.html  EmbedderProcessor.html  EmbeddingsDb.html  EvalRunner.html  ExperimentStore.html  GitHubModelsEmbedder.html  GitTracker.html  NullLogger.html  Orchestrator.html  RAGASRunner.html  RagBenchEvaluator.html  RagError.html  SkillRoutingEvaluator.html  TelemetryFlusher.html  TelemetryManager.html  TelemetrySession.html  UploadError.html  Uploader.html  VirageDb.html
crates/virage-engine/: Cargo.toml  build.rs
crates/virage-engine-sdk/: Cargo.toml
crates/virage-engine-sdk/examples/: plain-text-chunker.rs  sandbox-probe.rs
crates/virage-engine-sdk/src/: lib.rs
crates/virage-engine-sdk/wit/: virage-engine.wit
crates/virage-engine/src/: lib.rs  ort_glibc_compat.c  output.rs  progress.rs
crates/virage-engine/src/chunkers/: docx.rs  lang.rs  latex.rs  md.rs  mod.rs  pdf.rs  walk.rs
crates/virage-engine/src/config/: mod.rs  resolve.rs
crates/virage-engine/src/db/: mod.rs
crates/virage-engine/src/embedders/: mod.rs  onnx.rs
crates/virage-engine/src/onnx/: mod.rs
crates/virage-engine/src/pipeline/: coordinator.rs  mod.rs  worker.rs
crates/virage-engine/src/plugins/: mod.rs
crates/virage-engine/src/plugins/wasm/: chunker.rs  discovery.rs  mod.rs  tests.rs
crates/virage-engine/src/rerankers/: cross_encoder.rs  mod.rs
crates/virage-engine/src/sources/: git.rs  local_fs.rs  mod.rs
crates/virage-engine/src/stores/: chromadb.rs  lancedb.rs  mod.rs  postgres.rs  qdrant.rs
crates/virage-engine/src/transport/: local.rs  mod.rs
crates/virage-engine/tests/fixtures/: plain-text-chunker.wasm  sandbox-probe.wasm
docs/: ADR.md  CHUNKING_ROADMAP.md  EVAL_ROADMAP.md  MIGRATION_v2.md  ROADMAP.md  USE_CASES.md  quality.md
eval/: code-chunk_ce-md.json  golden-dataset-inference-prompt.md  golden-dataset.json  quality-evaluation-inference-prompt.md  run-all.mts  skill-routing.mts  suite.json  token-efficiency.mts
functions/: aggregateComponent.html  aggregateEvalResults.html  aggregateOverall.html  autoDetectConfig.html  batchArray.html  batchBySize.html  bootstrapPairedTest.html  computeChunkQualityMetrics.html  computeChunkingMetrics.html  computeContentHash.html  computeDenseEmbeddingMetrics.html  computeDenseInputMetrics.html  computeDenseTextHash.html  computeEvalResult.html  computeLexicalRetrievalMetrics.html  computeMetadataMetrics.html  computeRerankerInputMetrics.html  computeRerankerMetrics.html  computeSparseInputMetrics.html  computeStatus.html  createChunker.html  createLogger.html  defaultChunksFile.html  defaultEmbeddingsDb.html  defaultEmbeddingsFile.html  defaultVirageDb.html  discoverPlugins.html  downloadAndExtract.html  downloadAndExtractTo.html  ensurePluginsInstalled.html  evaluateMustPassGates.html  extractDirectory.html  extractFileName.html  formatConsole.html  formatJson.html  formatMarkdown.html  generateEvalDataset.html  getGlobalVirageDir.html  getVirageDir.html  hitRateAtK.html  (+38 more)
interfaces/: BenchmarkDataPoint.html  Chunk.html  ChunkMeta.html  ChunkMetricsInput.html  ChunkQualityMetrics.html  ChunkStrategy.html  ChunkTransformer.html  ChunkerEntry.html  ChunkerTemplate.html  ComponentResult.html  DatabaseSpec.html  DenseEmbeddingMetricsInput.html  DenseInputMetricsInput.html  EcosystemEvalDataset.html  EcosystemEvalResult.html  EmbeddedChunk.html  EmbeddingConfig.html  EmbeddingMetrics.html  EmbeddingProvider.html  EmbeddingsFileFormat.html  EmbeddingsMeta.html  EmbeddingsReadResult.html  EvalDataset.html  EvalQuery.html  EvalResult.html  EvalRunResult.html  EvalSuite.html  EvalVariant.html  ExperimentRun.html  FeedbackPayload.html  FileChunker.html  FilesetDefinition.html  GitHubModelsEmbedderOptions.html  HfRagBenchEvalOptions.html  HfRagBenchSummary.html  HfSubsetResult.html  HistoryEntry.html  IndexStats.html  LLMJudge.html  LabelRule.html  (+55 more)
scripts/: build-eval-dbs.mjs  eval-matrix.sh  install.ps1  install.sh  patch-lockfile-stubs.cjs  query-matrix.sh  run-eval-build.mjs  update-suite-urls.mjs
src/: config-loader.ts  index.ts
types/: ComponentId.html  HfRagBenchSubset.html  QualityStatus.html  SourceRef.html  TemplateValue.html
variables/: BUILTIN_TO_PACKAGE.html  COMMUNITY_TELEMETRY_ENDPOINT.html  DEFAULT_EXCLUDE_PATTERNS.html  DEFAULT_TELEMETRY_CONFIG.html  HF_RAGBENCH_SUBSETS.html  IGNORED_DIRS.html  MISSING_CATEGORY_VALUES.html  PACKAGE_TO_BUILTIN.html  VIRAGE_CONFIG_SCHEMA_VERSION.html
virage-runner/: package.json
wit/: virage-engine.wit
(+185 files in other folders)
